[project]
name = "aws-cdk-constructs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "aws-cdk-aws-bedrock-agentcore-alpha>=2.237.1a0",
    "aws-cdk-aws-s3tables-alpha>=2.236.0a0",
    "aws-cdk-lib>=2.236.0",
    "constructs>=10.4.5",
]

[tool.uv.workspace]
members = [
    "unit/v1/agent_core_stack",
]


